gitops/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    traefik.io/router.middlewares: argocd-argocd-headers@kubernetescrd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-gateway-controller
      sectionName: websecure
  hostnames:
    - "argocd.sanderpeters.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 80
          weight: 1
